# adam-lang

./: .gitattributes  .gitignore  CLAUDE.md  Justfile  README.md
.github/workflows/: ci.yml
benchmarks/: fib35.adam  loop_sum.adam  string_concat.adam
benchmarks/results/: latest.json
compiler/: Cargo.toml
compiler/src/: ast.rs  autograd.rs  bytecode.rs  compiler.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  types.rs
docs/: architecture.md  autograd.md  compiler-pipeline.md  language-spec.md  mnist.md  tensor-types.md  transformer.md  vm-internals.md
examples/: calculator.adam  fibonacci.adam  linear_regression.adam  mnist.adam  mnist_smoke.adam  neural_net.adam  tail_recursion.adam  tensor_basic.adam  tensor_broadcast.adam  test_basic.adam  test_chain.adam  test_nested_call.adam  test_pipe.adam  transformer.adam
stdlib/: pyproject.toml
stdlib/src/adam_tools/: __init__.py  benchmark.py  prepare_mnist.py  prepare_names.py  repl.py  runner.py  test_runner.py
tests/: test_attention.adam  test_broadcast_nd.adam  test_e2e.py  test_load_names.adam  test_new_ops.adam  test_permute.adam  test_regression.py  test_sum_axis_nd.adam  test_tensor_ops.adam
tests/snapshots/: calculator_baseline.txt  linear_regression_baseline.txt  tensor_basic_baseline.txt  tensor_broadcast_baseline.txt
tools/lsp/: package-lock.json  package.json  tsconfig.json
tools/lsp/src/: server.ts
tools/playground/: index.html  package-lock.json  package.json  tsconfig.json
tools/playground/src/: app.ts  examples.ts  interpreter.ts
tools/syntax/: adam.tmLanguage.json
vm/: CMakeLists.txt
vm/include/adam/: chunk.h  common.h  debug.h  gc.h  native.h  object.h  table.h  value.h  vm.h
vm/src/: chunk.c  debug.c  gc.c  main.c  native.c  object.c  table.c  test_vm.c  value.c  vm.c
