[project]
name = "adam-tools"
version = "0.1.0"
description = "CLI tooling for the Adam programming language — REPL, runner, test framework, and benchmarks."
requires-python = ">=3.11"
dependencies = [
    "prompt-toolkit>=3.0",
    "pygments>=2.17",
]

[project.scripts]
adam = "adam_tools.runner:main"
adam-repl = "adam_tools.repl:main"
adam-test = "adam_tools.test_runner:main"
adam-bench = "adam_tools.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adam_tools"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
